--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "codestats.apikey": "SFMyNTY.YzNkaGNtRnFMVzVwYm1waCMjTVRReU56WT0.OjFlUc_vCSPVNbv1O-9tl_F1UFXwtma58DnyadXZkFA",
-    "codestats.username": "swaraj-ninja"
+    "codestats.username": "swaraj-ninja",
+    "codestats.apikey": "SFMyNTY.YzNkaGNtRnFMVzVwYm1waCMjTVRRek5UTT0.Oq-Clfsg5TfLn54in9uubNmCXxIgV0Z4lTS0wN4iVsw"
 }
